# ChangeLog for gnome-extra/gcalctool
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/gnome-extra/gcalctool/ChangeLog,v 1.156 2008/04/10 22:25:18 eva Exp $

*gcalctool-5.22.1 (10 Apr 2008)

  10 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gcalctool-5.22.1.ebuild:
  bump to 5.22.1. Bug fixes and translation updates.

*gcalctool-5.22.0 (23 Mar 2008)

  23 Mar 2008; Mart Raudsepp <leio@gentoo.org> +gcalctool-5.22.0.ebuild:
  New version for GNOME-2.22. Switches hexadecimal high number entering to
  lower-case letters again for convenience. For other changes consult the
  installed NEWS file if interested, especially if scientific calculations
  are conducted with gcalctool.

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> gcalctool-5.20.2.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> gcalctool-5.20.2.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> gcalctool-5.20.2.ebuild:
  Marking gcalctool-5.20.2 ppc stable for bug 199740

  23 Nov 2007; Jeroen Roovers <jer@gentoo.org> gcalctool-5.9.14-r1.ebuild:
  Stable for HPPA (bug #198845).

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> gcalctool-5.20.2.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org> gcalctool-5.20.2.ebuild:
  Stable on x86 (bug #199740)

  20 Nov 2007; Samuli Suominen <drac@gentoo.org> gcalctool-5.20.2.ebuild:
  amd64 stable wrt #199740

  19 Nov 2007; Markus Rothe <corsair@gentoo.org> gcalctool-5.9.14-r1.ebuild:
  Stable on ppc64; bug #198845

  17 Nov 2007; nixnut <nixnut@gentoo.org> gcalctool-5.9.14-r1.ebuild:
  Stable on ppc wrt bug 198845

  14 Nov 2007; Raúl Porcel <armin76@gentoo.org> gcalctool-5.9.14-r1.ebuild:
  alpha/ia64/sparc stable wrt #198845

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  gcalctool-5.9.14-r1.ebuild:
  stable x86, bug 198845
